-- Websites registered by users for scanning (issue #34).
-- owner_id is the user id carried in the JWT issued by the auth-service; the users
-- table belongs to the auth-service, so ownership is a logical reference, not an FK.
CREATE SCHEMA IF NOT EXISTS api_service;

CREATE TABLE api_service.websites (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    owner_id   BIGINT                   NOT NULL,
    url        VARCHAR(2048)            NOT NULL,
    name       VARCHAR(255)             NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL,
    CONSTRAINT uq_websites_owner_url UNIQUE (owner_id, url)
);

CREATE INDEX idx_websites_owner ON api_service.websites (owner_id);
