-- Scan jobs (issue #17) and their findings (issue #20).
-- Enum-valued columns store the Java enum constant names (e.g. PENDING, CRITICAL);
-- the API contract casing (Pending, Critical) is applied at the serialization layer.
CREATE TABLE api_service.scans (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    website_id         BIGINT                   NOT NULL REFERENCES api_service.websites (id) ON DELETE CASCADE,
    status             VARCHAR(16)              NOT NULL,
    requested_checks   VARCHAR(255)             NOT NULL,
    crawl_depth        INT                      NOT NULL,
    include_subdomains BOOLEAN                  NOT NULL,
    created_at         TIMESTAMP WITH TIME ZONE NOT NULL,
    completed_at       TIMESTAMP WITH TIME ZONE,
    error_message      VARCHAR(2048),
    in_flight_website_id BIGINT
);

CREATE INDEX idx_scans_website ON api_service.scans (website_id);
CREATE INDEX idx_scans_status ON api_service.scans (status);
CREATE UNIQUE INDEX uq_scans_one_in_flight_per_website
    ON api_service.scans (in_flight_website_id);

CREATE TABLE api_service.findings (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    scan_id       BIGINT        NOT NULL REFERENCES api_service.scans (id) ON DELETE CASCADE,
    check_type    VARCHAR(32)   NOT NULL,
    title         VARCHAR(255)  NOT NULL,
    severity      VARCHAR(16)   NOT NULL,
    affected      VARCHAR(2048) NOT NULL,
    explanation   VARCHAR(4000) NOT NULL,
    suggested_fix VARCHAR(4000) NOT NULL,
    status        VARCHAR(16)   NOT NULL
);

CREATE INDEX idx_findings_scan ON api_service.findings (scan_id);
