CREATE SCHEMA IF NOT EXISTS auth_service;

CREATE TABLE auth_service.users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(320) NOT NULL,
    password VARCHAR(255) NOT NULL,
    CONSTRAINT uk_auth_users_email UNIQUE (email)
);
