@startuml Database Schema
!theme plain
skinparam defaultFontSize 12
skinparam linetype ortho

title VibeShield — Database Schema (ERD)

!define TABLE(name) entity name

package "auth_service schema" #F1F8F1 {
  TABLE(users) {
    + id : BIGINT <<PK, generated>>
    --
    email : VARCHAR(320) <<unique>>
    password : VARCHAR(255) <<bcrypt>>
  }

  TABLE(password_reset_tokens) {
    + id : BIGINT <<PK, generated>>
    --
    # user_id : BIGINT <<FK>>
    token : VARCHAR(128) <<unique>>
    expires_at : TIMESTAMP
    used_at : TIMESTAMP <<nullable>>
  }

  users ||--o{ password_reset_tokens : "has"
}

package "api_service schema" #EEF4FF {
  TABLE(websites) {
    + id : BIGINT <<PK, generated>>
    --
    owner_id : BIGINT <<JWT "userId" claim, logical ref>>
    url : VARCHAR(2048)
    name : VARCHAR(255)
    created_at : TIMESTAMPTZ
    ..
    UNIQUE (owner_id, url)
  }

  TABLE(scans) {
    + id : BIGINT <<PK, generated>>
    --
    # website_id : BIGINT <<FK>>
    status : VARCHAR(16)
    requested_checks : VARCHAR(255)
    crawl_depth : INT
    include_subdomains : BOOLEAN
    created_at : TIMESTAMPTZ
    started_at : TIMESTAMPTZ <<nullable>>
    completed_at : TIMESTAMPTZ <<nullable>>
    error_message : VARCHAR(2048) <<nullable>>
    in_flight_website_id : BIGINT <<unique, nullable>>
  }

  TABLE(findings) {
    + id : BIGINT <<PK, generated>>
    --
    # scan_id : BIGINT <<FK>>
    check_type : VARCHAR(32)
    title : VARCHAR(255)
    severity : VARCHAR(16)
    affected : VARCHAR(2048)
    explanation : VARCHAR(4000)
    suggested_fix : VARCHAR(4000)
    status : VARCHAR(16)
  }

  websites ||--o{ scans : "has"
  scans ||--o{ findings : "produces"
}

note bottom of websites
  owner_id is the user.id from auth_service.
  Cross-schema ownership — no FK (separate service boundary).
end note

@enduml